# forest-age-upscale

./: .dockerignore  .gitignore  .gitmodules  =1.2  README.md  conftest.py  pyproject.toml  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/docker-login-google/: action.yaml
.github/actions/setup-k8s-google/: action.yaml
.github/workflows/: pep8.yml  template.yaml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
.kubernetes/base/: env.development.secret  env.production  env.production.secret  job.yaml  kustomization.yaml  spearth_sa.json.secret  storagewriter_sa.json.secret
.kubernetes/overlays/compiler/: job.yaml  kustomization.yaml  pvc.yaml
.kubernetes/overlays/cuber/: .job.yaml.swp  job.yaml  kustomization.yaml  pv.yaml  pvc.yaml
.kubernetes/overlays/data_mover/: job.yaml  kustomization.yaml  pvc.yaml
.kubernetes/overlays/downloader/: job.yaml  kustomization.yaml  pvc.yaml
.kubernetes/overlays/ec-cuber/: job.yaml  kustomization.yaml  pvc.yaml
.kubernetes/overlays/global-cuber/: job.yaml  kustomization.yaml  pv.yaml  pvc.yaml
.kubernetes/overlays/modis-gapfiller/: job.yaml  kustomization.yaml  pvc.yaml
.kubernetes/overlays/template/: job.yaml  kustomization.yaml
ageUpscaling/: __init__.py
ageUpscaling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ageUpscaling/core/: __init__.py  cube.py  cube_utils.py  experiment.py  experiment_utils.py  study.py  test_cube.py
ageUpscaling/cube/: __init__.py  cube.py
ageUpscaling/cubegen/: __init__.py  global_cube.py
ageUpscaling/cubegen/cube/: BacciniBiomass.py  ESABiomass.py  ForestManagement.py  LandsatDisturbanceTime.py  __init__.py  canopyHeight.py  soilgrids.py
ageUpscaling/dataloaders/: __init__.py  base.py  ml_dataloader.py
ageUpscaling/diagnostic/: __init__.py  age_partition.py  biomassDiff_partition.py  biomass_partition.py  management_partition.py  management_type.py  report.py
ageUpscaling/fidc_cube/: __init__.py  csv_to_fidcCube.py
ageUpscaling/forward_run/: upscale_forest_age_RF.py  upscale_forest_age_XGboost.py  upscale_forest_age_classProbaRF.py  upscale_forest_age_quantileRF.py  upscale_forest_age_quantileRF_new.py
ageUpscaling/forward_run/utils/: MLPclassifier.py  MLPclassifier_optuna.py  MLPregression.py  MLPregression_optuna.py  RFclassifier.py  RFregression.py  hp_tune_reg.py  shap_importance.py
ageUpscaling/global_cube/: __init__.py  global_cube.py
ageUpscaling/methods/: AgeFusion.py  CRBayesAgeFuser.py  LandTrendr.js  MLP.py  MLPclassifier.py  MLPregression.py  RFclassifier.py  RFregression.py  RandomForest.py  __init__.py  autoML.py  extrapolation_index.py  feature_selection.py  ml_base.py  shap_importance.py  xgboost.py
ageUpscaling/transformers/: __init__.py  model_ensemble.py  spatial.py
ageUpscaling/upscaling/: __init__.py  age_class_fraction.py  biomass_uncertainty.py  upscale_forest_age_MLP.py  upscaling.py
ageUpscaling/utils/: __init__.py  metrics.py  plotting.py  utilities.py
analysis/: tableS6.py  tableS7.py
analysis/generate_figures/: fig1.py  fig2.py  fig3.py  fig4.py  figExt1.py  figExt2.py  figExt3.py  figExt4.py  figExt5.py  figExt6.py  figExt7.py  figExt8.py  figExt9.py  figS1.py  figS10.py  figS11.py  figS12.py  figS13.py  figS14.py  figS15.py  figS16.py  figS17.py  figS18.py  figS19.py  figS2.py  figS20.py  figS3.py  figS4.py  figS5.py  figS6.py  figS7.py  figS8.py  figS9.py  tableExt1.py  tableS1.py  tableS2.py  tableS3.py  tableS4.py  tableS5.py  tableS6.py  (+1 more)
analysis/scripts/agb_diff_partition/: BiomassDiffFrac_calc.py  BiomassDiffFrac_calc.sh  BiomassDiff_calc.py  BiomassDiff_calc.sh  create_cube.py  create_cube.sh  run_batch_BiomassDiff.sh
analysis/scripts/agb_partition/: BiomassPartitionFrac_calc.py  BiomassPartitionFrac_calc.sh  BiomassPartition_calc.py  BiomassPartition_calc.sh  BiomassTotalFrac_calc.py  BiomassTotalFrac_calc.sh  create_cube.py  create_cube.sh  run_batch_BiomassPartition.sh
analysis/scripts/age_class_fraction/: AgeClassFrac_calc.py  AgeClassFrac_calc.sh  AgeClass_calc.py  AgeClass_calc.sh  create_cube.py  create_cube.sh  run_batch_AgeClass.sh
analysis/scripts/age_diff_partition/: AgeDiffFrac_calc.py  AgeDiffFrac_calc.sh  AgeDiffPartitionFrac_calc.py  AgeDiffPartitionFrac_calc.sh  AgeDiff_calc.py  AgeDiff_calc.sh  create_cube.py  create_cube.sh  run_batch_AgeDiff.sh
analysis/scripts/biomass_uncertainty/: CCI-AGB100m_members_cubegen.py  CCI-AGB100m_members_cubegen.sh  run_batch_BiomassUncertainty.sh
analysis/scripts/cross_validation/: run_nfi_validation.py  run_nfi_validation.sh  run_xval_study.py  run_xval_study_MLP.py  (+7 more)
dev/: CpoolSimple_model.py  THchange_AGBchange.py  Xval_MLP_class.py  Xval_MLP_reg.py  anova_management.py  bias_correction_diagnostic.py  create_20m_cube.py  create_fidc_cube.py  create_final_dataset.py  create_report_study.py  data_4DataCenter.py  data_4DataCenter_31AgeClasses.py  example_4e-science_team.py  export_prediction.py  extract_intact_forest.py  extract_soilgrids.py  extract_worlClim.py  gami_diagnostic_fluxtower.py  generate_global_cube.py  imputation_data.py  k_mean_cluster.py  merge_mosaic.py  perform_feature_selection.py  run_age_class_fraction.py  run_extrapolationIndex.py  run_model_ensemble.py  run_model_training_study.py  run_upscaling.py  run_xval_experiment.py  run_xval_study.py  shap_value_plot.py  soilgrids_cubegen.py  stand_replacement_model.py  test.py  test_upscaling.py  training_MLP.py
experiments/: config_global_cube.yaml  data_config.yaml
experiments/age_class_fraction/: config_age_fraction.yaml
experiments/cross_validation/: config_prediction_cube.yaml  data_config.yaml  data_config_autoML.yaml  data_config_mlp.yaml  data_config_randomforest.yaml  data_config_xgboost.yaml  data_config_xgboost_fullVar.yaml
experiments/forward_run/: config_prediction_cube.yaml  data_config.yaml  data_config_mlp.yaml
experiments/global_cube_gen/: config_global_cube.yaml  config_soilgrids_cube.yaml
save_model/: test_model.pickle
(+28 files in other folders)
